syntax = "proto3";

package nodepb;

option go_package = "github.com/tcapook01/distributed_mutex/proto/nodepb";

service Node {
  rpc RequestAccess (AccessRequest) returns (AccessReply) {}
  rpc GrantAccess (AccessGrant) returns (Ack) {}
}

message AccessRequest {
  int32 nodeId = 1;
  int64 timestamp = 2;
}

message AccessGrant {
  int32 nodeId = 1;
}

message AccessReply {}
message Ack {}
